# Jelly_ROS_22-23

./: .gitignore  README.md  installVSCode.sh  install_dep.sh  test.txt
OLED/: install_oled_ip_script.sh  oled_ip.py  pioled_stats.service
Test/: test.txt
catkin_ws/: .gitignore  build_catkin_folder.sh
catkin_ws/src/: README.md
catkin_ws/src/controller/: CMakeLists.txt
catkin_ws/src/hydrophones/: CMakeLists.txt
catkin_ws/src/jetson_hydrophones/: jetson_hydrophone.py
catkin_ws/src/kill_switch/: CMakeLists.txt  package.xml
catkin_ws/src/kill_switch/src/: kill_switch.py
catkin_ws/src/main/: package.xml
catkin_ws/src/ros-imu-bno055/: README.md
controller/: package.xml
controller/src/: attitude_controller_node.py  subscriber_test.py
hydrophones/: package.xml
jetson_hydrophones/: jetson_hydrophone.py
main/: package.xml
main/launch/: hardware.launch  jelly_stab.launch
main/src/: custom_controller_stab_hard_fix.py  custom_thrust_allocator_stab_hard.py  stab_main_hard.py  volt_monitor.py
main/srv/: numpyArray.srv
motor_command/: CMakeLists.txt  package.xml  volt_monitor.py
motor_command/src/: down_forw.py  motor_commander.py
ms5837/scripts/: kalman_test.py
ms5837/src/: ms5837_driver.py  ms5837_ros.py  test_ms.py
ros-imu-bno055/launch/: imu.launch
ros-imu-bno055/src/: bno055_i2c_node.cpp
test-scripts/: hydrophone_test2.py  i2c_scan.py  kill_switch_test.py  motor_test.py  readFromSerial.py  usb-camera-simple.py
test-scripts/USB-Camera/: usb-camera-simple.py
usb_cam/nodes/: usb_cam_node_bottom.cpp
(+21 files in other folders)
