<?xml version="1.0"?>
<package format="2">
  <name>kill_switch</name>
  <version>0.0.0</version>
  <description>This package contains the script to read values from GPIO pins connected to the kill_switch. Motor_command relies on this node.</description>

  <maintainer email="muengrsurf@missouri.edu">MUsurf</maintainer>
  <license>TODO</license>

  <url type="repository">https://github.com/MUsurf/Jelly_ROS_22-23</url>
  <author email="mariaclare08@gmail.com">Maria Lusardi</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
